# neon-radar

./: .gitignore  INSTALL.md  README.md  config.example.json  phase1_results.txt  pyproject.toml  requirements-dev.txt  requirements.txt  scoring_rules.json  stage4_summary.txt  stage5_proposal.txt  stage5a_summary.txt  stage6_proposal.txt  stage6a_summary.txt  stage6b_summary.txt  trades_export.csv
.agents/: AGENTS.md
config/: scoring.example.json
docs/: ARCHITECTURE.md  DECISIONS.md  RC1_OBSERVATIONS.md  RC2_ARCHITECTURE.md  market_context_contract.md
results/: diagnostics_report.md  phase1_analytical_report_draft.md  phase1_raw.json  phase1_wfa_regime_summary.json  phase1_wfa_regime_summary_before.json  trades_export.csv
results/tmp/: boot_Bear_1d.json  boot_Bear_4h.json  boot_Bull_1d.json  boot_Bull_4h.json  boot_COVID_1d.json  boot_COVID_4h.json  boot_Chop_1d.json  boot_Chop_4h.json  boot_FTX_1d.json  boot_FTX_4h.json
scripts/: generate_report.py  rc4_sprint1_validation.py  run_diagnostics.py  run_phase1.py  run_phase1_bootstrap.py  run_phase1_wfa.py  verify_market_context.py  verify_market_context_history.py
src/neon_radar/: __init__.py
src/neon_radar/application/: __init__.py
src/neon_radar/application/services/: analysis.py  backtester.py  bootstrap_analyzer.py  feature_analyzer.py  indicator_pipeline.py  live_data_fetcher.py  market_context_provider.py  market_data.py  paper_trading_engine.py  parameter_optimizer.py  regime_classifier.py  trade_analyzer.py  trade_backtester.py  walk_forward_analyzer.py
src/neon_radar/config/: __init__.py  loader.py  models.py  scoring_loader.py  scoring_models.py
src/neon_radar/domain/: __init__.py  enums.py  exceptions.py  funding.py  market_context.py  market_state.py  models.py  risk.py
src/neon_radar/domain/indicators/: __init__.py  _numpy_helpers.py  adx.py  atr.py  base.py  bollinger.py  ema.py  macd.py  roc.py  rsi.py  sma.py  volume_ma.py
src/neon_radar/domain/scoring/: __init__.py  aggregator.py  backtest.py  engine.py  factor_rule.py  registry.py  value_objects.py
src/neon_radar/domain/trading/: __init__.py  backtest.py  bootstrap.py  evaluator.py  execution.py  feature_importance.py  paper.py  regime.py  setup.py  walk_forward.py
src/neon_radar/infrastructure/: __init__.py  cache.py
src/neon_radar/infrastructure/exchanges/: __init__.py  base.py  binance_transport.py
src/neon_radar/infrastructure/exporters/: trade_exporter.py
src/neon_radar/infrastructure/providers/: binance_context.py  binance_dto.py
src/neon_radar/presentation/: __init__.py  app.py  cli.py  main_window.py
src/neon_radar/presentation/theme/: __init__.py  neon_palette.py
src/neon_radar/presentation/widgets/: chart_widget.py  detail_panel.py  (+1 more)
src/neon_radar/utils/: __init__.py  async_bridge.py  logging.py
tests/: conftest.py  test_analysis_pipeline.py  test_backtest.py  test_binance_client.py  test_binance_mapper.py  test_bollinger_bands_rule.py  test_cache.py  test_candle_breakout_rule.py  test_cli.py  test_cli_explain.py  test_config.py  test_domain.py  test_exchange_client.py  test_funding.py  test_higher_tf_trend_rule.py  test_indicator_atr.py  test_indicator_bollinger.py  test_indicator_ema.py  test_indicator_macd.py  test_indicator_pipeline.py  test_indicator_roc.py  test_indicator_rsi.py  test_indicator_sma.py  test_indicator_volume_ma.py  test_indicators_base.py  test_macd_momentum_rule.py  test_market_state.py  test_rate_limiter.py  test_scoring.py  test_scoring_aggregator.py  test_scoring_aggregator_behavior.py  test_scoring_aggregator_decoupled.py  test_scoring_engine.py  test_scoring_models.py  test_scoring_open_interest.py  test_scoring_rules.py  test_sma_trend_rule.py  test_trading_setup.py  test_ui_chart.py  test_ui_radar.py
tests/application/services/: test_bootstrap_analyzer.py  test_drawdown.py  test_feature_analyzer.py  test_market_context.py  test_risk_manager.py  test_sizing.py  test_trade_analyzer.py  test_trade_backtester.py  test_walk_forward_analyzer.py
tests/domain/: test_risk.py
tests/domain/scoring/: test_confluence.py
tests/domain/trading/: test_execution.py
~/.neon_radar/cache/: BTCUSDT_1d.json  ETHUSDT_1d.json
(+29 files in other folders)
